# coin-counter

./: Cargo.toml  change.txt  readme.md  test.txt
src/: main.rs
src/coins/: coin.rs  mod.rs  util.rs
